<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/table_header"
    android:gravity="center_vertical">


    <TableRow
        android:id="@+id/table_headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/header_bachelor_average"
            style="@style/TableInfoHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_info_bachelor_average" />

        <TextView
            android:id="@+id/header_average"
            style="@style/TableInfoHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_info_master_average" />

        <TextView
            android:id="@+id/header_ects"
            style="@style/TableInfoHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_info_ects" />

    </TableRow>

    <TableRow
        android:id="@+id/table_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <TextView
            android:id="@+id/bachelor_average"
            style="@style/TableInfoHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_grade" />

        <TextView
            android:id="@+id/average"
            style="@style/TableInfoHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_grade" />

        <TextView
            android:id="@+id/ects"
            style="@style/TableInfoHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="1"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_ects" />

    </TableRow>


</TableLayout>